fix tests for ExpenseDao