@@ -14,7 +14,6 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -43,44 +42,40 @@ class ExpenseDaoImplTest {
     void setUp() {
         expenseDao = new ExpenseDaoImpl(sessionFactory);
 
-        // Создаем тестового пользователя согласно вашей модели
-        testUser = new User("testuser", "test@email.com", "password");
+        testUser = new User("testUser", "test@mail.com", "password");
         testUser.setId(1L);
         testUser.setCreatedAt(LocalDateTime.now());
 
-        // Создаем тестовые расходы
         testExpense1 = new Expense();
         testExpense1.setId(1L);
-        testExpense1.setCategory("Продукты");
-        testExpense1.setAmount(BigDecimal.valueOf(5000.0));
-        testExpense1.setUser(testUser); // Устанавливаем связь с пользователем
+        testExpense1.setCategory("Products");
+        testExpense1.setAmount(BigDecimal.valueOf(5000));
+        testExpense1.setUser(testUser);
 
         testExpense2 = new Expense();
         testExpense2.setId(2L);
-        testExpense2.setCategory("Транспорт");
-        testExpense2.setAmount(BigDecimal.valueOf(2000.0));
-        testExpense2.setUser(testUser); // Устанавливаем связь с пользователем
+        testExpense2.setCategory("Transport");
+        testExpense2.setAmount(BigDecimal.valueOf(2000));
+        testExpense2.setUser(testUser);
 
-        // Устанавливаем список расходов для пользователя
-        testUser.setExpenses(Arrays.asList(testExpense1, testExpense2));
+        testUser.setExpenses(List.of(testExpense1, testExpense2));
     }
 
     @Test
     void getAllExpense_ShouldReturnExpenses_WhenUserExists() {
-        // Arrange
         when(sessionFactory.openSession()).thenReturn(session);
         when(session.beginTransaction()).thenReturn(transaction);
         when(session.get(User.class, 1L)).thenReturn(testUser);
 
-        // Act
-        List<Expense> result = expenseDao.getAllExpense(1L);
+        List<Expense> resultList = expenseDao.getAllExpense(1L);
 
-        // Assert
-        assertNotNull(result);
-        assertEquals(2, result.size());
-        assertEquals("Продукты", result.get(0).getCategory());
-        assertEquals(BigDecimal.valueOf(5000.0), result.get(0).getAmount());
-        assertEquals(testUser, result.get(0).getUser()); // Проверяем связь
+        assertNotNull(resultList);
+        assertEquals(2, resultList.size());
+        assertEquals("Products", resultList.getFirst().getCategory());
+        assertEquals(BigDecimal.valueOf(5000), resultList.getFirst().getAmount());
+
+        assertEquals("Transport", resultList.get(1).getCategory());
+        assertEquals(BigDecimal.valueOf(2000), resultList.get(1).getAmount());
 
         verify(session).beginTransaction();
         verify(session).get(User.class, 1L);
@@ -89,18 +84,15 @@ class ExpenseDaoImplTest {
     }
 
     @Test
-    void getAllExpense_ShouldReturnEmptyList_WhenUserNotFound() {
-        // Arrange
+    void getAllExpenses_ShouldReturnEmptyList_WhenUserNotFound() {
         when(sessionFactory.openSession()).thenReturn(session);
         when(session.beginTransaction()).thenReturn(transaction);
         when(session.get(User.class, 999L)).thenReturn(null);
 
-        // Act
-        List<Expense> result = expenseDao.getAllExpense(999L);
+        List<Expense> resultList = expenseDao.getAllExpense(999L);
 
-        // Assert
-        assertNotNull(result);
-        assertTrue(result.isEmpty());
+        assertNotNull(resultList);
+        assertTrue(resultList.isEmpty());
 
         verify(session).beginTransaction();
         verify(session).get(User.class, 999L);
@@ -109,9 +101,8 @@ class ExpenseDaoImplTest {
     }
 
     @Test
-    void getAllExpense_ShouldReturnEmptyList_WhenUserHasNoExpenses() {
-        // Arrange
-        User userWithoutExpenses = new User("noexpenses", "noexpenses@email.com", "password");
+    void getAllExpenses_ShouldReturnEmptyList_WhenUserHashNoExpenses() {
+        User userWithoutExpenses = new User("noExpenses", "test@mail.com", "password");
         userWithoutExpenses.setId(2L);
         userWithoutExpenses.setExpenses(Collections.emptyList());
 
@@ -119,12 +110,10 @@ class ExpenseDaoImplTest {
         when(session.beginTransaction()).thenReturn(transaction);
         when(session.get(User.class, 2L)).thenReturn(userWithoutExpenses);
 
-        // Act
-        List<Expense> result = expenseDao.getAllExpense(2L);
+        List<Expense> resultList = expenseDao.getAllExpense(2L);
 
-        // Assert
-        assertNotNull(result);
-        assertTrue(result.isEmpty());
+        assertNotNull(resultList);
+        assertTrue(resultList.isEmpty());
 
         verify(session).beginTransaction();
         verify(session).get(User.class, 2L);
@@ -133,22 +122,19 @@ class ExpenseDaoImplTest {
     }
 
     @Test
-    void getAllExpense_ShouldHandleNullExpensesList() {
-        // Arrange
-        User userWithNullExpenses = new User("nullexpenses", "nullexpenses@email.com", "password");
+    void getAllExpenses_ShouldHandleNullExpensesList() {
+        User userWithNullExpenses = new User("nullExpenses", "test@mail.com", "password");
         userWithNullExpenses.setId(3L);
-        userWithNullExpenses.setExpenses(null); // Явно устанавливаем null
+        userWithNullExpenses.setExpenses(null);
 
         when(sessionFactory.openSession()).thenReturn(session);
         when(session.beginTransaction()).thenReturn(transaction);
         when(session.get(User.class, 3L)).thenReturn(userWithNullExpenses);
 
-        // Act
-        List<Expense> result = expenseDao.getAllExpense(3L);
+        List<Expense> resultList = expenseDao.getAllExpense(3L);
 
-        // Assert
-        assertNotNull(result);
-        assertTrue(result.isEmpty());
+        assertNotNull(resultList);
+        assertTrue(resultList.isEmpty());
 
         verify(session).beginTransaction();
         verify(session).get(User.class, 3L);
@@ -157,15 +143,13 @@ class ExpenseDaoImplTest {
     }
 
     @Test
-    void getAllExpense_ShouldRollbackTransaction_WhenExceptionOccurs() {
-        // Arrange
+    void getAllExpenses_ShouldRollbackTransaction_WhenExceptionOccurs() {
         when(sessionFactory.openSession()).thenReturn(session);
         when(session.beginTransaction()).thenReturn(transaction);
         when(session.get(User.class, 1L)).thenThrow(new RuntimeException("Database error"));
 
-        // Act & Assert
         RuntimeException exception = assertThrows(RuntimeException.class, () -> {
-            expenseDao.getAllExpense(1L);
+           expenseDao.getAllExpense(1L);
         });
 
         assertEquals("Error getting Expense list", exception.getMessage());
@@ -179,60 +163,21 @@ class ExpenseDaoImplTest {
     }
 
     @Test
-    void getAllExpense_ShouldCloseSession_EvenWhenExceptionOccurs() {
-        // Arrange
-        when(sessionFactory.openSession()).thenReturn(session);
-        when(session.beginTransaction()).thenReturn(transaction);
-        when(session.get(User.class, 1L)).thenThrow(new RuntimeException("Error"));
-
-        // Act & Assert
-        assertThrows(RuntimeException.class, () -> expenseDao.getAllExpense(1L));
-
-        // Verify session is closed even after exception
-        verify(session).close();
-    }
-
-    @Test
     void getAllExpense_ShouldHandleTransactionNull_WhenBeginTransactionFails() {
-        // Arrange
         when(sessionFactory.openSession()).thenReturn(session);
-        when(session.beginTransaction()).thenReturn(null); // Transaction is null
+        when(session.beginTransaction()).thenReturn(null);
         when(session.get(User.class, 1L)).thenReturn(testUser);
 
-        // Act
-        List<Expense> result = expenseDao.getAllExpense(1L);
+        List<Expense> resultList = expenseDao.getAllExpense(1L);
 
-        // Assert
-        assertNotNull(result);
-        assertEquals(2, result.size());
+        assertNotNull(resultList);
+        assertEquals(2, resultList.size());
 
         verify(session).beginTransaction();
         verify(session).get(User.class, 1L);
-        // Should not call commit or rollback when transaction is null
+        verify(session).close();
+
         verify(transaction, never()).commit();
         verify(transaction, never()).rollback();
-        verify(session).close();
-    }
-
-    @Test
-    void getAllExpense_ShouldInitializeLazyCollection() {
-        // Arrange
-        when(sessionFactory.openSession()).thenReturn(session);
-        when(session.beginTransaction()).thenReturn(transaction);
-        when(session.get(User.class, 1L)).thenReturn(testUser);
-
-        // Act
-        List<Expense> result = expenseDao.getAllExpense(1L);
-
-        // Assert
-        assertNotNull(result);
-        // Hibernate.initialize() должен быть вызван для ленивой коллекции
-        // В реальном тесте мы бы проверили, что коллекция инициализирована
-        assertEquals(2, result.size());
-
-        verify(session).beginTransaction();
-        verify(session).get(User.class, 1L);
-        verify(transaction).commit();
-        verify(session).close();
     }
 }
